<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/design_bottom_sheet_login"
    android:background="@android:color/transparent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="45dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:background="@color/black"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_account"
                android:textColor="@color/black"
                android:fontFamily="@font/inter"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edLoginEmail"
                    android:hint="@string/someone_gmail_com"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/inter"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edLoginPassword"
                    android:hint="@string/password_hint"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/inter"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvForgotPassword"
                    android:clickable="true"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_gravity="end"
                    android:focusable="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/logInLogInBtn"
                        android:textColor="@color/white"
                        android:text="@string/log_in"
                        android:backgroundTint="@color/orange"
                        android:textAllCaps="false"
                        android:fontFamily="@font/inter"
                        android:textSize="16sp"
                        android:layout_marginEnd="10dp"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/logInSignUpBtn"
                        android:textColor="@color/white"
                        android:text="@string/sign_up"
                        android:backgroundTint="@color/orange"
                        android:textAllCaps="false"
                        android:fontFamily="@font/inter"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/google_icon"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/divider"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/facebook_round_icon"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/todo" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>