<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/transparent_logo"
                android:contentDescription="@string/todo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainHeader"
                android:text="@string/mapdrive"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="400dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/click_below_to_start_nexploring"
                    android:textSize="36sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter"
                    android:textStyle="bold"/>


            </LinearLayout>


            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:id="@+id/startBtn"
                android:src="@drawable/chevron_up"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/todo"/>


        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>